--- a/src/estilo.css
+++ b/src/estilo.css
@@ -1,24 +1,163 @@
-body {
+/*body {
+    /*background-image: url("/img/blob1).svg") left bottom;
 
-    background-image: url(/img/DSCN0740.jpg) ;
+   /* background-image: url(/img/DSCN0740.jpg) ;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hide;
     
-}
-.containerChiste{
-    background-color: rgba(127, 255, 212,0.6 );
-        width: 40rem;
-        position: absolute;
-        top: 20rem;
-        left:35rem;
+}*/
+main {
+    position: relative;
+    /*para posicionar el contenedor de los chistes*/
+    width: auto;
+    height: auto;
+    margin: auto;
+    border: solid red;
 }
 
-.puntuacion{
+body {
+    font-family: arial;
+}
+
+.claseTiempo {
+    position: abosolute;
+    display: inline-flex;
+    /*display: flex;*/
+    position: top left;
+    /*padding: 2rem;*/
+    font-size: 0.5em;
+    border: solid;
+}
+
+
+#iconoTiempo {
+    /*align-self: center;*/
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+   /* top: 1.1rem;*/
+    /* esto tiene que haber otra manera mejor*/
+    border: solid;
+}
+
+#tiempo {
+    font-size: 2em;
+    border-left: 2px solid;
+    padding-left: 1em;
+    border: solid;
+}
+
+
+.col {
+    display: inline-block;
+}
+
+
+
+/*.prueba{
+    background-image: url("/img/blob1.svg")  ;
+    background-image: url("/img/blob2.svg")  ;
+    background-position: top right;
+    background-repeat: no-repeat;
+    border: 2px solid red;
+    /*url("/img/blob2.svg");/* center, url("/img/blob3.svg") top right;
+    background-image: url("/img/blob1.svg")  ;
+    /*background-size: 30% 100% 30%;
+    background-repeat: no-repeat;
+    border: 2px solid red;
+    height: 600px;
+}*/
+.paraFondo {
+    /*referencia para posicionar elementos*/
+    width: 100%;
+    position: relative;
+    margin: auto;
+    text-align: center;
+    border: solid blue;
+}
+
+.fondo {
+    display: inline-block;
+    height: 50vh;
+    width: 28%;
+    background-repeat: no-repeat;
+}
+
+.start {
+    background-image: url(/img/blob3.svg);
+    background-size: 30%;
+    background-position: bottom right;
+
+}
+
+.centro {
+    width: 40%;
+    background-image: url(/img/blob.svg);
+    background-size: 130%;
+    background-position: center;
+}
+
+.end {
+    background-image: url(/img/blob2.svg);
+    background-size: 40%;
+    background-position: top left;
+}
+
+.containerChiste {
+    width: 40%;
+    display: inline;
+    text-align: center;
+    position: absolute;
+
+    /*si no pongo un position relative antes, este div se posiciona respecto del body, interesa mas respecto al main*/
+    top: 40%;
+    left: 32%;
+    color: white;
+    line-height: 1em;
+    border: solid violet;
+    display: ;
+}
+
+h1 {
+    font-size: 1em;
+    border: solid red;
+    display: inline-flex;
+}
+
+#chiste {
+    font-size: 0.8em;
+    border: solid black;
+    display: inline-flex;
+}
+
+.containerBotones {
+    padding-bottom: 1em;
+    padding-top: 0px;
+    border: solid blue;
+}
+
+.botonSiguiente {
+    border: 0.5px solid rgb(47, 40, 40);
+    background-color: yellow;
+    border-radius: 20px;
+    padding: 6px;
+
+
+    /*before para desplazar el borde o el fondo? no funciona*/
+}
+
+
+.puntuacion {
     background-color: rgba(243, 247, 245, 0.1);
-    }
+    border: none;
+    border-radius: 10px;
+    padding: none;
+    margin: none;
+    font-size: 1.5rem;
+}
 
-    .puntuacion:hover {
-        background-color: rgba(93, 139, 184, 0.1);
-        border-color: blue;
-    }
+.puntuacion:hover {
+    background-color: rgba(93, 139, 184, 0.1);
+
+}
